# pacman

./: .gitignore  Makefile  TODO.md  config.json  mazegenerator-00001-py3-none-any.whl  pyproject.toml
.github/workflows/: lint.yml
src/: error.py  game.py  main.py  maze.py  pac-man.py  type.py
src/display/: display.py  enhanced_cell.py  maze_renderer.py  textures.py
src/entity/: __init__.py  collectible.py  entity.py  ghost.py  pac-man.py  pac_man.py
src/parsing/: config.py  parsing.py
