[tool.poetry]
name = "pac-man"
version = "0.0.1"

[tool.poetry.dependencies]
python = ">=3.13"
raylib = "==5.5.0.4"
mazegenerator = { path = "lib/mazegenerator-00001-py3-none-any.whl" }
pydantic = "^2.12.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = ">=1.19.1"
flake8 = ">=7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
